--- a/default/app.conf
+++ b/default/app.conf
@@ -5,7 +5,7 @@ is_configured = 1
 
 [ui]
 is_visible = 1
-label = Stats for Broken Hosts
+label = Stats for Missing Data
 
 [launcher]
 author = Ryan O'Connor
