--- a/default/savedsearches.conf
+++ b/default/savedsearches.conf
@@ -1,34 +1,68 @@
-[Build State]
-alert.suppress = 0
-alert.track = 1
-counttype = number of events
+[Number of Data Points]
+action.email.useNSSubject = 1
+alert.track = 0
 cron_schedule = 0 0 * * *
-dispatch.earliest_time = -1d
+dispatch.earliest_time = -24h@h
 dispatch.latest_time = now
-display.events.fields = ["host","source","sourcetype","bid{}","bugtraq","canvas_package","cert","cert-cc","cert{}","cpe","cpe{}","cve","cve{}","cvss","cvss3_base_score","cvss3_temporal_score","cvss3_temporal_vector","cvss3_vector","cvss_base_score","cvss_temporal_score","cvss_temporal_vector","cvss_vector","cwe","cwe{}","default_account","description","eventtype","exploit_available","exploit_framework_canvas","exploit_framework_core","exploit_framework_metasploit","exploitability_ease","exploited_by_malware","exploited_by_nessus","family_name","fedora","fname","glsa","id","index","linecount","mdksa","metasploit_name","msft","msft{}","mskb","osvdb","osvdb{}","patch_publication_date","plugin_modification_date","plugin_name","plugin_publication_date","plugin_type","potential_vulnerability","product","punct","rhsa","risk_factor","script_version","secunia","see_also","see_also{}","signature","signature_id","solution","splunk_server","synopsis","tag","tag::eventtype","timestamp","usn","vendor","vuln_publication_date","xref","xref{}","address","alias","current_state","currentDBSizeMB","dest","diff","display_name","execution_time","home","host_display_name","hostcheck_id","inode","latency","load_15_min","load_1_min","load_5_min","log","loss","maxTotalDataSizeMB","mem","mem_bytes","mem_free","mem_free_percent","mem_used","mem_used_bytes","opt","output","perfdata","pl","procs","ram_used","rta","RTA","service_display_name","servicecheck_id","size","splunk","swap","swap_bytes","swap_free","swap_free_percent","swap_used","swap_used_bytes","time","tmp","unsent","usr","var"]
 display.general.type = statistics
 display.page.search.mode = fast
 display.page.search.tab = statistics
-display.visualizations.charting.chart = line
+display.visualizations.show = 0
 enableSched = 1
-quantity = 0
-relation = greater than
-request.ui_dispatch_app = search
+request.ui_dispatch_app = StatsforMissingData
 request.ui_dispatch_view = search
-search = | tstats count WHERE sourcetype=* earliest=-60d@d by _time host sourcetype index span=15m \
-| makecontinuous _time span=15m \
-| eval combo=host."-".sourcetype."-".index \
+search = | tstats count WHERE sourcetype=* earliest=-60d@d by _time host sourcetype index span=30m \
+| makecontinuous _time span=30m \
+| eval combo=host."&&&&".sourcetype."&&&&".index \
 | xyseries _time combo count \
-| makecontinuous _time span=15m \
+| makecontinuous _time span=30m \
 | fillnull value=0 \
 | untable _time combo count \
 | eval HourOfDay=strftime(_time, "%H") \
 | eval BucketMinuteOfHour=strftime(_time, "%M") \
 | eval DayOfWeek=strftime(_time, "%A") \
-| stats max(count) as avg stdev(count) as stdev by HourOfDay BucketMinuteOfHour DayOfWeek combo \
+| eval Year=strftime(_time, " %Y") \
+| eval DayOfYear=strftime(_time, "%j") \
+| eval DayOfWeekNumeric=strftime(_time, "%w") \
+| stats avg(count) as avg by HourOfDay BucketMinuteOfHour DayOfWeek DayOfWeekNumeric Year DayOfYear combo \
+| sort 0 + combo DayOfYear DayOfWeekNumeric HourOfDay BucketMinuteOfHour \
+| fields lowerBound,upperBound,HourOfDay,BucketMinuteOfHour,DayOfWeek,combo, spike, DayOfWeekNumeric, avg avg_stream, avg_overall number_of_data_points, DayOfYear, Year | eval datapoint=case(avg>0, "1", 1=1, "0") | stats sum(datapoint) as sum by combo DayOfWeek HourOfDay BucketMinuteOfHour  | outputlookup number_datapoints_lookup
+
+[Build State for ML]
+action.email.useNSSubject = 1
+alert.track = 0
+cron_schedule = 0 3 * * *
+dispatch.earliest_time = -24h@h
+dispatch.latest_time = now
+display.general.type = statistics
+display.page.search.tab = statistics
+display.visualizations.show = 0
+enableSched = 1
+request.ui_dispatch_app = StatsforMissingData
+request.ui_dispatch_view = search
+search = | tstats count WHERE sourcetype=* earliest=-60d@d by _time host sourcetype index span=30m \
+| makecontinuous _time span=30m \
+| eval combo=host."&&&&".sourcetype."&&&&".index \
+| xyseries _time combo count \
+| makecontinuous _time span=30m \
+| fillnull value=0 \
+| untable _time combo count \
+| eval HourOfDay=strftime(_time, "%H") \
+| eval BucketMinuteOfHour=strftime(_time, "%M") \
+| eval DayOfWeek=strftime(_time, "%A") \
+| eval DayOfWeekNumeric=strftime(_time, "%w") \
+| stats avg(count) as avg stdev(count) as stdev by HourOfDay BucketMinuteOfHour DayOfWeek DayOfWeekNumeric combo \
+| sort 0 + combo DayOfWeekNumeric HourOfDay BucketMinuteOfHour \
+| streamstats reset_on_change=true window=5 avg(avg) as avg_stream by combo \
+| eventstats avg(avg) as avg_overall by combo \
+| eval spike=if(avg > 2 * avg_stream, 10000, 0) \
+| eval avg=case(spike==10000, avg_overall, 1=1, avg) \
 | eval lowerBound=(avg-stdev*exact(2)), upperBound=(avg+stdev*exact(2)) \
-| fields lowerBound,upperBound,HourOfDay,BucketMinuteOfHour,DayOfWeek,combo \
-| outputlookup state.csv
+| fields lowerBound,upperBound,HourOfDay,BucketMinuteOfHour,DayOfWeek,combo, spike, DayOfWeekNumeric, avg avg_stream, avg_overall, stdev\
+| outputlookup state_lookup
+
+
+
 
 [Host Frequency]
 alert.suppress = 0
