--- a/default/transforms.conf
+++ b/default/transforms.conf
@@ -1,9 +1,9 @@
 [state_lookup]
 external_type = kvstore
 collection = state
-fields_list = lowerBound, upperBound, HourOfDay, BucketMinuteOfHour, DayOfWeek, combo,spike, DayOfWeekNumeric, avg, avg_stream, avg_overall, stdev
+fields_list = combo_count, lowerBound, upperBound, HourOfDay, BucketMinuteOfHour, DayOfWeek, combo,spike, DayOfWeekNumeric, avg, avg_stream, avg_overall, stdev, datapoints_for_day, total_datapoints, frequency
 
-[number_datapoints_lookup]
+[missing_data_audit_lookup]
 external_type = kvstore
-collection = number_datapoints
-fields_list = combo, DayOfWeek, HourOfDay, BucketMinuteOfHour, sum
+collection=missing_data_audit
+fields_list = _time, definition, success, user, reason
